<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".Login">




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rectangle_white"
        android:orientation="vertical"
        android:paddingBottom="44dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textColor="@color/txt_black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_gray_border"

            android:hint="@string/first_name"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_hint"
            android:textSize="14sp"
            android:drawableRight="@drawable/ic_person_black_24dp"


            />

        <EditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_gray_border"
            android:hint="@string/last_name"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_hint"
            android:textSize="14sp"

            android:drawableRight="@drawable/ic_person_black_24dp"
            />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_gray_border"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_hint"
            android:textSize="14sp"
            android:drawableRight="@drawable/ic_mail"/>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_gray_border"
            android:hint="Your password"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_hint"
            android:textSize="14sp"
            android:drawableRight="@drawable/ic_lock"
            />

        <EditText
            android:id="@+id/confirmpassword"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_gray_border"
            android:hint="@string/confirm_password"
            android:paddingLeft="15dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:textColor="@color/txt_black"
            android:textColorHint="@color/txt_hint"
            android:textSize="14sp"
            android:drawableRight="@drawable/ic_lock"/>
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirmpassword"
            />



        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/rectangle_pink"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/submit"
            android:id="@+id/btnregister"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/or"
            android:textColor="@color/txt_hint"
            android:textSize="12sp" />




        <View
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15.5dp"
            android:layout_marginRight="15dp"
            android:background="@color/viewline_color" />

        <TextView
            android:id="@+id/loginform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12.5dp"
            android:text="Click here to Login"
            android:textColor="@color/blue"
            android:textSize="12sp"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:src="@drawable/circle_white"
           />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/terms_of_use"
            android:textColor="@color/light_white"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>